add local libraries test

--- a/locallib/index.html
+++ b/locallib/index.html
@@ -6,6 +6,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/selfie_segmentation/selfie_segmentation.js" crossorigin="anonymous"></script>
+
+    <script src="camera_utils/camera_utils.js" crossorigin="anonymous"></script>
+    <script src="control_utils/control_utils.js" crossorigin="anonymous"></script>
+    <script src="drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
+    <script src="selfie_segmentation/selfie_segmentation.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
