remove input video

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <script type="module">
     const videoElement = document.getElementsByClassName('input_video')[0];
+    videoElement.style.display = 'none';
     const canvasElement = document.getElementsByClassName('output_canvas')[0];
     const canvasCtx = canvasElement.getContext('2d');
 
