fix aspect ratios

--- a/locallib/index.html
+++ b/locallib/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="container">
         <video class="input_video"></video>
-        <canvas class="output_canvas" width="1280px" height="720px"></canvas>
-<!--        <canvas class="output_canvas" width="720px" height="1280px"></canvas>-->
+<!--        <canvas class="output_canvas"></canvas>-->
+        <canvas class="output_canvas" width="1080px" height="720px"></canvas>
     </div>
     <div class="control-panel">
     </div>
@@ -23,6 +23,8 @@
     const videoElement = document.getElementsByClassName('input_video')[0];
     videoElement.style.display = 'none';
     const canvasElement = document.getElementsByClassName('output_canvas')[0];
+    canvasElement.style.width = "1080px";
+    canvasElement.style.height = "720px";
     const canvasCtx = canvasElement.getContext('2d');
 
     var img = new Image();
@@ -75,7 +77,7 @@
         onFrame: async () => {
             await selfieSegmentation.send({image: videoElement});
         },
-        width: 1280,
+        width: 1080,
         height: 720
     });
     camera.start();
