--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container">
     <video class="input_video"></video>
-    <canvas class="output_canvas" width="1280px" height="720px"></canvas>
+    <canvas class="output_canvas" width="1080px" height="720px"></canvas>
 </div>
 </body>
 
@@ -20,6 +20,8 @@
     const videoElement = document.getElementsByClassName('input_video')[0];
     videoElement.style.display = 'none';
     const canvasElement = document.getElementsByClassName('output_canvas')[0];
+    canvasElement.style.width = "1080px";
+    canvasElement.style.height = "720px";
     const canvasCtx = canvasElement.getContext('2d');
 
     function onResults(results) {
@@ -53,7 +55,7 @@
         onFrame: async () => {
             await selfieSegmentation.send({image: videoElement});
         },
-        width: 1280,
+        width: 1080,
         height: 720
     });
     camera.start();
